# zip-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: write_dir.rs
src/: aes.rs  compression.rs  read.rs  result.rs  types.rs  write.rs
