[package]
name = "zip"
version = "0.5.8"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
license = "MIT"
repository = "https://github.com/mvdnes/zip-rs.git"
documentation = "http://mvdnes.github.io/rust-docs/zip-rs/zip/index.html"
keywords = ["zip", "archive"]
description = """
Library to support the reading and writing of zip files.
"""
edition = "2018"

[dependencies]
aes = "0.5.0"
byteorder = "1.3"
bzip2 = { version = "0.3", optional = true }
crc32fast = "1.0"
# FIXME(#170): flate2 1.0.15 has an MSRV of 1.36.0, breaking ours. We'll update when we know if this will be addressed
flate2 = { version = ">=1.0.0, <=1.0.14", default-features = false, optional = true }
hmac = "0.9.0"
pbkdf2 = "0.5.0"
sha-1 = "0.9.1"
thiserror = "1.0"
time = { version = "0.1", optional = true }

[dev-dependencies]
bencher = "0.1"
rand = "0.7"
walkdir = "2"

[features]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
default = ["bzip2", "deflate", "time"]

[[bench]]
name = "read_entry"
harness = false
