[package]
name = "zip"
version = "0.5.8"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
license = "MIT"
repository = "https://github.com/mvdnes/zip-rs.git"
documentation = "http://mvdnes.github.io/rust-docs/zip-rs/zip/index.html"
keywords = ["zip", "archive"]
description = """
Library to support the reading and writing of zip files.
"""
edition = "2018"

[dependencies]
aes = { version = "0.5.0", optional = true }
byteorder = "1.3"
bzip2 = { version = "0.3", optional = true }
constant_time_eq = { version = "0.1.5", optional = true }
crc32fast = "1.0"
# FIXME(#170): flate2 1.0.15 has an MSRV of 1.36.0, breaking ours. We'll update when we know if this will be addressed
flate2 = { version = ">=1.0.0, <=1.0.14", default-features = false, optional = true }
hmac = {version = "0.9.0", optional = true }
pbkdf2 = {version = "0.5.0", optional = true }
sha-1 = {version = "0.9.1", optional = true }
thiserror = "1.0"
time = { version = "0.1", optional = true }

[dev-dependencies]
bencher = "0.1"
rand = "0.7"
walkdir = "2"

[features]
aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha-1" ]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
default = ["bzip2", "deflate", "time"]

[[bench]]
name = "read_entry"
harness = false
